--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-HELLO WORLD
 
-
-<button onClick="window.location.reload();">Refresh Page</button>
+<html>
+  <body>
+    <p>HELLO WORLD</p>
+    <button onClick="window.location.reload();">Refresh Page</button>
+    <p>END</p>
+  </body>
+</html>
