--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <p>HELLO WORLD!</p>
-    <button onClick="window.location.reload();">Refresh Page</button>
+    <button onClick="window.location.reload(true);">Refresh Page</button>
     <p>END</p>
   </body>
 </html>
