--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <body>
-    <p>HELLO WORLD!</p>
+    <p>HELLO WORL3D!</p>
     <button onClick="window.location.reload(true);">Refresh Page</button>
     <p>END</p>
   </body>
