--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 <html>
+  <head>
+<meta http-equiv="Cache-Control" content="no-store, max-age=0">
+</head>
   <body>
     <p>HELLO WORL3D!</p>
     <button onClick="window.location.reload(true);">Refresh Page</button>
