--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ function listCookies() {
   <body>
     <p>HELLO WORL3444D!</p>
     <button onClick="window.location.reload(true);">Refresh Page</button>
+    <p>cookies:</p>
     <span id="myId"><span>
     <p>END</p>
   </body>
