--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ function listCookies() {
 </head>
   <body>
     <p>HELLO WORL3444D!</p>
+    <p>
+      <a href="http://volail.github.io/">http://volail.github.io/</a>
+    </p>
     <button onClick="window.location.reload(true);">Refresh Page</button>
     <p>cookies:</p>
     <span id="myId"><span>
