--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
   <head>
 <meta http-equiv="Cache-Control" content="no-store, max-age=0">
-
+</head>
+  <body>
+    <p>HELLO WORL3444D!</p>
+    <p>
+      <a href="https://volail.github.io/">https://volail.github.io/</a>
+    </p>
+    <button onClick="window.location.reload(true);">Refresh Page</button>
+    <p>cookies:</p>
+  
+    <span id="myId"><span>
+      
     <script>
 document.getElementById('myId').innerHTML=listCookies()
 function listCookies() {
@@ -14,15 +24,6 @@ function listCookies() {
     return aString;
 }
 </script>
-</head>
-  <body>
-    <p>HELLO WORL3444D!</p>
-    <p>
-      <a href="http://volail.github.io/">http://volail.github.io/</a>
-    </p>
-    <button onClick="window.location.reload(true);">Refresh Page</button>
-    <p>cookies:</p>
-    <span id="myId"><span>
     <p>END</p>
   </body>
 </html>
